<resources>
    <string name="app_name">BulbaCash</string>
    <string name="course_valuta">Курс валют</string>
    <string name="Check">Баланс</string>
    <string name="Templates_money">Шаблон расходов</string>
    <string name="History_balans">История расходов</string>
    <string name="Future_balans">Заметка расхода</string>
    <string name="About_app">О приложении</string>
    <string name="coefficient">1.0</string>
    <string name="defaultUSA">1 Доллар США</string>
    <string name="defaultBLR">1 Белорусский рубль</string>
    <string name="defaultValueUSA">2.82</string>
    <string name="defaultValueBLR">1.00</string>
    <string name="defaultEU">1 Евро</string>
    <string name="defaultValueEU">3.08</string>
    <string name="graphFileShare">graphShare</string>
    <string name="add_new_buckets">Добавить баскет</string>
    <string name="nameStencil">This is name of stencil</string>
    <string name="TypesVal">Введите тип расхода, пункта</string>
    <string name="st_templates">Сохранить статью расход</string>
</resources>